@@ -1059,5 +1059,7 @@ Wed Jul 30 09:32:01 CEST 2003 <ddouxchamps@users.sf.net>
     * ... don't forget to do this for OSX too. (SVN329)
 	
 2006-12-04 Damien Douxchamps<ddouxchamps@users.sf.net>
-    * fixed inconsistancy in bayer decoding functions (Georg Glock)
-    * removed the error code related to raw1394 capture
+    * fixed inconsistancy in bayer decoding functions (Georg Glock) (SVN 330)
+    * removed the error code related to raw1394 capture (SVN 331)
+    * fixed error check in dc1394_set_roi (Mikael Olenfalk)
+    * removed extra error string definition for raw1394 failure (SVN 332)
